MultiRepos: fix colspan after previous change and add visible outer borders to the revision log tables in verbose mode.
git-svn-id: http://trac.edgewall.org/intertrac/log:/sandbox/multirepos@8492 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/browser.css
+++ b/trac/htdocs/css/browser.css
@@ -179,6 +179,12 @@ table.chglist { margin-top: 0 }
  color: #333;
 }
 .chglist tr.verbose td { border: none; }
+.chglist tr.verbose td.diff, .chglist tr.verbose td.filler {
+ border-left: 1px solid #ddd; 
+}
+.chglist tr.verbose td.summary, .chglist tr.verbose td.log {
+ border-right: 1px solid #ddd; 
+}
 
 #paging { margin: 1em 0 }
 
